fjord-compiler/test/errors/uniqueness/ModifySharedRecord.fj
module errors.uniqueness.ModifySharedRecord


record Shared 
  sharedInt : Int


illegalMutation : &Shared -> Shared
illegalMutation a =
  { a | sharedInt = 3 }
